Resolve overflow issues on cards

--- a/components/LandingPageCard/LandingPageCard.module.scss
+++ b/components/LandingPageCard/LandingPageCard.module.scss
@@ -12,7 +12,6 @@
   &.full {
     display: flex;
     gap: 1rem;
-    height: 100%;
     margin-bottom: 0;
 
     .images {
